--- a/XML_tim31/pom.xml
+++ b/XML_tim31/pom.xml
@@ -81,7 +81,15 @@
             <artifactId>fop</artifactId>
             <version>0.93</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.3.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
 
     </dependencies>
