--- a/XML_tim31/src/main/resources/application.properties
+++ b/XML_tim31/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8081
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+conn.user=admin
+conn.password=admin
+
+conn.host=localhost
+
+# driver class
+conn.driver=org.exist.xmldb.DatabaseImpl
 
