--- a/XML_tim31/src/main/resources/exist.properties
+++ b/XML_tim31/src/main/resources/exist.properties
@@ -1,9 +1,12 @@
 # connection configuration properties 
 conn.user=admin
-conn.password=admin*123
+conn.password=
 
 conn.host=localhost
 conn.port=8080
+
+
+conn.dataset=publications
 
 # driver class
 conn.driver=org.exist.xmldb.DatabaseImpl
