transforming xml publication files to html and pdf using xsl backend

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "frontend"
+    }
+  },
+  "defaultProject": "frontend",
+  "cli": {
+    "analytics": "19773736-8c14-4479-aa1d-91164f6acfb1"
+  }
 }
