--- a/XML_tim31/src/main/resources/exist.properties
+++ b/XML_tim31/src/main/resources/exist.properties
@@ -1,6 +1,6 @@
 # connection configuration properties 
 conn.user=admin
-conn.password=
+conn.password=admin*123
 
 conn.host=localhost
 conn.port=8080
