--- a/XML_tim31/src/main/resources/application.properties
+++ b/XML_tim31/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 conn.user=admin
-conn.password=
+conn.password=admin*123
 
 conn.host=localhost
 
