--- a/XML_tim31/pom.xml
+++ b/XML_tim31/pom.xml
@@ -119,6 +119,11 @@
             <version>6.0.16.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
 
     </dependencies>
 
