--- a/XML_tim31/src/main/resources/application.properties
+++ b/XML_tim31/src/main/resources/application.properties
@@ -1,10 +1,23 @@
 server.port=8081
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 conn.user=admin
-conn.password=admin*123
+conn.password=
 
 conn.host=localhost
 
 # driver class
 conn.driver=org.exist.xmldb.DatabaseImpl
+
+#email settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=  ${GMAIL_USERNAME}
+spring.mail.password=  ${GMAIL_PASSWORD}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.smtp.starttls.enable=true
 
